# DS6051_Decoding_LLMs

./: .gitignore  Lecture06_Finetuning_Textbook.md  inference_llm_demo.ipynb  lora_graph  pyproject.toml  requirement_week1.txt  tok400.model  tok400.vocab  v10_finetuning.ipynb  v1_basic_bigram.ipynb  v2_linear_bigram.ipynb  v3_self_attention_bigram.ipynb  v4_multihead_attention_bigram.ipynb  v5_feedforward_bigram.ipynb  v6_transformer_block.ipynb  v7_residual.ipynb  v8_scale.ipynb  v9_dropout.ipynb  week_1_sentiment_classifier.ipynb  week_1_word2vec.ipynb  week_2_tokenizer.ipynb
