[project]
name = "ds6051-decoding-llms"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "umap-learn>=0.5.12",
]
