[project]
name = "ds6051-decoding-llms"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.14.0",
    "datasets>=5.0.0",
    "gensim>=4.4.0",
    "huggingface-hub>=1.19.0",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "nltk>=3.9.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.6.0",
    "sentencepiece>=0.2.1",
    "spacy>=3.8.14",
    "tabulate>=0.10.0",
    "torch>=2.12.1",
    "torchinfo>=1.8.0",
    "torchview>=0.2.7",
    "torchviz>=0.0.3",
    "transformers>=5.12.1",
    "umap-learn>=0.5.12",
]
